# kifit

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_example.sh  setup.cfg  setup.py
doc/public/: kifit.xmind
src/kifit/: __init__.py  artist.py  base_config.json  benchmark.py  build.py  builder.py  builder_kingfunctions.py  cache_update.py  config.py  debug.py  detools.py  fitools.py  fitvsdetools.py  hist_1.npy  hist_2.npy  hist_3.npy  hunter.py  loadelems.py  main.py  main_matteo.py  main_new.py  main_temp.py  messenger.py  performfit.py  performfit_new.py  plot.py  plotfit.py  plots.py  refactored_main.py  run.py  run.sh  run2.sh  run_Ca24.sh  run_Ca24globalopt.sh  run_Ca24noglobalopt.sh  run_Camin.sh  run_Yb24.sh  run_YbPTB24.sh  run_bestYb24.sh  run_det.sh  (+13 more)
src/kifit_data/: swap_cols.py
src/qiss/: __init__.py  builder.py  cache_update.py  experiment.py  genfitparams.py  kingmc.py  loadelems.py  main.py  optimize.py  optimizers.py  plots.py  user_elements.py
src/tests/: Mathematica_crosschecks.py  Mathematica_crosschecks_covmats.py  Mathematica_crosschecks_noKperp.py  check.txt  data_ma.py  test_build.py  test_builder.py  test_cache_update.py  test_detools.py  test_experiment.py  test_fcts.py  test_fitools.py  test_fitvsdet.py  test_fitvsdetools.py  test_kifit.py  test_load_data.py  test_loadelems.py  test_performfit.py  test_tools.py  testi.py  tst_build_noKperp.py  tst_fitools_noKperp.py  (+1 more)
tests/: Mathematica_crosschecks.py  test_builder.py  test_cache_update.py  test_load_data.py  test_loadelems.py  test_performfit.py
(+179 files in other folders)
